fixed text align in draggable windows vs unclosable windows

--- a/static/css/windows.css
+++ b/static/css/windows.css
@@ -69,7 +69,7 @@ body{
     box-shadow: 5px 5px 20px #0a0a0a, inset 1px 1px #dfdfdf, inset -2px -2px grey, inset 2px 2px #fff;
 }
 
-.window-body {
+.uncloseable-window-body {
     text-align: center;
 }
 
@@ -190,4 +190,8 @@ body{
 
   #aim-button-row div div p, #aim-button-row div p{
     margin-top: 1px;
+  }
+
+  #steam-help{
+      text-align: left;
   }
